--- a/pkg/openapi/oapi-codegen.yaml
+++ b/pkg/openapi/oapi-codegen.yaml
@@ -4,6 +4,6 @@ generate:
   client: true
   models: true
   embedded-spec: true
-output: pkg/model/api.gen.go
+output: pkg/api/api.gen.go
 output-options:
   skip-prune: true
